--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=http://localhost/api/
+VITE_API_BASE_URL=http://localhost:82/api/
 # VITE_API_BASE_URL=https://api-adm-dev.themplus.com.br/api/
 # VITE_API_BASE_URL=https://api-adm-app.themplus.com.br/api/
 VUE_ROUTER_MODE=history
